minor text fixes, need to finish draft

--- a/tex/edp_changes.tex
+++ b/tex/edp_changes.tex
@@ -171,6 +171,11 @@ The weekly dummy variables appear to be less important to the overall results. T
 
 \subsection{2 Stage Least Squares}
 
+Running the IV regression causes the coefficient on price to fall.
+
+This indicates upward bias. People care less about the price.
+
+
 \bibliography{edp_changes}{}
 \bibliographystyle{plain}
 
